# led-table

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  README.md  STM32F446.ld
doc/: led-table.scad  led-table.stl
misc/cube-mx/: .mxproject  cube-mx.ioc
misc/cube-mx/EWARM/: Project.eww  cube-mx.ewd  cube-mx.ewp
misc/cube-mx/Inc/: stm32f4xx_hal_conf.h
misc/cube-mx/Src/: main.c  stm32f4xx_hal_msp.c
misc/cube-mx/pwm-basic/Src/: main.c  stm32f4xx_hal_msp.c
misc/pacman-1.3/: pacman  pacman.h  pacmanedit
src/: Buttons.h  Color.h  Container.h  FrameBuffer.h  GenericGraphics.h  Geometry.h  IGame.h  Ncurses.h  Snake.cc  Snake.h  Timer.h  cat.c  cat.xcf  curses-compat.cc  curses-compat.h  formula1.c  goblin1.c  goblin2.c  main.cc  stm32f4xx_hal_conf.h  stm32f4xx_it.c  system_stm32f4xx.c  umm_malloc_cfg.h  version.h
src/games/backlight/: Backlight.hh
src/games/conway/: Conway.hh
src/games/snake/: Snake.h
src/games/sokoban/: Board.cc  Board.h  Levels.h  Sokoban.h
src/linux/: Buttons.cc  Buttons.h  Color.h  Control.cc  Control.h  FrameBuffer.h  Logging.cc  Logging.hh  System.cc  System.hh  Timer.cc  Timer.h
src/stm32/: Buttons.cc  Buttons.h  Color.h  Control.cc  Control.h  FrameBuffer.h  Logging.cc  Logging.hh  System.cc  System.hh  etl_profile.h  stm32f4xx_hal_conf.h  stm32f4xx_it.c  umm_malloc_cfg.h
src/stm32/usb/: Usb.cc  Usb.hh  UsbHidController.cc  UsbHidController.hh  menu.c  stm32446e_eval_io.H  usbh_conf.c  usbh_conf.h
src/ws2812b/: visEffect.c  ws2812b.c  ws2812b.h
